@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.34 2003/10/04 09:50:12 jaco Exp $
+# $Id: CHANGELOG,v 1.35 2003/10/04 10:53:28 jaco Exp $
 
 * Sat, Oct 04, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -55,6 +55,7 @@
       - hwdetect is not called from rc.* anymore (rather from
         linuxrc, to setup before MDK init)
       - Added partition reading and fstab generation
+      - Generate proper modules.conf from probed devices
     [linuxrc]:
       - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
         rest are actual writables
